--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -1,8 +1,9 @@
 /*defino los colores básicos del proyecto*/
+@import "colores";
+
 :root {
     --blanco:#ffffff;
     --oscuro:#212121;
-    --primario:#FFC107;
     --secundario:#0097A7;
     --gris:#757575;
     --grisClaro: #dfe0f3;
@@ -47,7 +48,7 @@ h1,h2,h3 {
 .titulo {
     font-size: 3.8rem;
     text-align: center;
-    color: var(--primario);
+    color: $ColorPrimario;
     font-weight: 700;
     text-decoration: none;
     letter-spacing: 2px;
@@ -217,6 +218,7 @@ h1,h2,h3 {
     margin-bottom: 2rem;
     color: var(--primario);
 }
+
 @media (min-width: 768px) {
     .formulario-campo {
         display: grid;
@@ -233,20 +235,20 @@ h1,h2,h3 {
     }
 }
 
-
+/* Acá use Sass */
 .campo {
     margin-bottom: 1rem;
-}
-
-.campo label {
+    label {
         color: var(--blanco);
         font-weight: bold;
         margin-bottom: 0.5rem;
         display: inline;
-}
-.campo textarea {
+    }
+    textarea {
         height: 20rem;
+    }
 }
+
 
 .TipoTexto {
     width: 100%;
